--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,8 @@ name: Henry Bushell
 description: Consultant/Software dev/Strange human
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://github.com/henryisb/henryisb.github.io/blob/master/images/Me-reflection.jpg
+#https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
 
 #
 # Flags below are optional
