--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Henry Bushell
 
 # Short bio or description (displayed in the header)
-description: Consultant/Software dev/Strange human
+description: Consultant/Software-something-type person/Strange human
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.github.com/henryisb/henryisb.github.io/master/images/Me-reflection.jpg
